tests/NormalTests/paczka2/big_fuzzy/64911375.err
Error in line 11: uZunH A662 2,55
Error in line 15: W9DrXqx1Msj S183 36,4
Error in line 16: W9DrXqx1Msj A662 27,7
Error in line 17: W9DrXqx1Msj S339 15,6
Error in line 10: uZunH A662 24,7
Error in line 28: eASK S183 44,2
Error in line 26: j1ElOeWT A662 10,1
Error in line 31: Lix9TX A662 84,9
Error in line 30: VnHsKLvH S204 17,5
Error in line 47: VnHsKLvH S339 37,5
Error in line 46: S204 S339 79,5
Error in line 73: Lix9TX A662 -3,7
Error in line 66: Lix9TX A662 37,9
Error in line 84: j1ElOeWT A662 21,7
Error in line 96: VnHsKLvH S339 148,3
Error in line 97: VnHsKLvH A662 89,3
Error in line 116: VnHsKLvH S204 5,6
Error in line 117: VnHsKLvH S183 59,8
Error in line 120: eASK S204 20,2
Error in line 128: uZunH S204 50,1
Error in line 132: uZunH S183 90,3
Error in line 143: j1ElOeWT S183 392,6
Error in line 146: eASK A662 74,9
Error in line 149: VnHsKLvH S204 7,O
Error in line 145: j1ElOeWT A662 88,9
Error in line 156: uZunH S183 27,12
Error in line 168: S204 S204 41,4
Error in line 173: Lix9TX S204 g8,2
Error in line 159: VnHsKLvH S204 14,0
Error in line 174: Lix9TX S204 66,3
Error in line 178: Lix9TX A662 59,0
Error in line 192: eASK S339 1,0
Error in line 165: uZunH S183 46,2
Error in line 208: uZunH A662 43,4
Error in line 206: VnHsKLvH S183 54,9
Error in line 209: S204 A662 24,6
Error in line 199: W9DrXqx1Msj A662 0,7
Error in line 207: j1ElOeWT S339 178,4
Error in line 239: VnHsKLvH A662 81,7
Error in line 246: S204 A662 35,1
